tests/k8s_testcases/network-policy-checks-bad-path/spec_egress_wrong_keys.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: spec-egress-test-keys
  namespace: kube-system
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - namespaceSelector: {}
        podSelector: {}
  # wrong keys
  egress:
    - from:
        - namespaceSelector: { }
          podSelector: { }
